officeWorker and contractWorker View interface and function created

--- a/databaseProject/databaseProject.csproj
+++ b/databaseProject/databaseProject.csproj
@@ -342,6 +342,8 @@
     <Content Include="Views\Employees\Details.cshtml" />
     <Content Include="Views\Employees\Edit.cshtml" />
     <Content Include="Views\Employees\Index.cshtml" />
+    <Content Include="Views\Employees\ContractWorkers.cshtml" />
+    <Content Include="Views\Employees\OfficeWorkers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
